# EspMeltingFurnace

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.devcontainer/: Dockerfile  devcontainer.json
Frontend/: sdkconfig
Frontend/.devcontainer/: Dockerfile
Frontend/SquareLine/: UI.spj  UI_events.py
Frontend/include/: lv_conf.h
Frontend/main/: CMakeLists.txt  Client.cxx  Client.hxx  GPIO.hxx  SPIBus.cxx  SPIBus.hxx  idf_component.yml  lcd.h  main.cxx  tempController.cxx  tempController.hxx  touch.cxx  touch.h
MAX31856_ESP-IDF_Thermocouple-main/main/: main.cpp
Server/: CMakeLists.txt  Server.code-workspace  sdkconfig  sdkconfig.defaults  sdkconfig.old
Server/components/ftxui/: CMakeLists.txt  Kconfig  component.mx  ftxui_esp32_input.cpp  ftxui_esp32_signal.cpp
Server/components/ftxui/ftxui/: CMakeLists.txt
Server/components/ftxui/ftxui/src/ftxui/component/: component_fuzzer.cpp
Server/components/ftxui/ftxui/src/ftxui/screen/: terminal.cpp
Server/components/ftxui/include/: ftxui
Server/main/: CMakeLists.txt  Console.cxx  Console.hxx  GPIO.cxx  GPIO.hxx  MAX31856TempDevice.cxx  SPIBus.cxx  SPIBus.hxx  Server.cxx  Server.hxx  SimulatedTempDevice.cxx  State.cxx  State.hxx  TempController.cxx  TempController.hxx  TempDevice.hxx  hardware.h  idf_component.yml  main.cxx  tempController.cxx  tempController.hxx
SquareLine/: UI.sll  UI.spj  UI_events.py
components/esp_lcd_touch_xpt2046/: esp_lcd_touch_xpt2046.c
components/esp_lcd_touch_xpt2046/include/: esp_lcd_touch_xpt2046.h
components/max31856/src/: Adafruit_MAX31856.cpp
lib/: Errors.hxx
lib/modbus/: Proto.hxx
lib/uart/: Uart.cxx  Uart.hxx
main/: CMakeLists.txt  FurnaceClient.cxx  FurnaceClient.hxx  GPIO.cxx  GPIO.hxx  Uart.cxx  hardware.h  idf_component.yml  lcd.c  lcd.h  lv_conf.h  main.cxx  max31856.c  max31856.cxx  max31856.h  max31856.hxx  spi_port.c  spi_port.h  tempController.cxx  tempController.hxx  touch.c  touch.h  touch.hxx  uiTemp.cxx  uiTemp.hxx
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
main/ui/images/: ui_img_pattern_png.c  ui_img_smelting_png.c
main/ui/screens/: ui_Settings.c  ui_Splash.c  ui_Temp.c
